# ATM-LAB-SD

./: CMakeLists.txt  main.cpp  money.txt  transaction.txt
Ui/: Ui.cpp  Ui.h
controler/: ATM.cpp  ATM.h
domain/: ATM.cpp  ATM.h  Tranzactions.cpp  Tranzactions.h
repo/: Collection.cpp  Collection.h  Iterator.cpp  Iterator.h  Repository.cpp  Repository.h
sem2_Collection/: CMakeLists.txt  Collection.cpp  Iterator.cpp  Iterator.h  main.cpp
util/: backtraking.cpp  backtraking.h
